# confiture

./: .gitignore  .phase2-plan.md  .plan.md  .pre-commit-config.yaml  ALL_IMPROVEMENTS_SUMMARY.txt  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_UPDATE.txt  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_DELIVERABLES.txt  DOCUMENTATION_REFRESH_SUMMARY.md  FEATURE_4_DAY_5_SUMMARY.md  FINALIZATION_REPORT.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INDEPENDENT_REVIEW_REPORT.md  ISSUE_1_FIX_SUMMARY.md  LOW_PRIORITY_SUMMARY.txt  Makefile  PHASES.md  PHASE_2_COMPLETION.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_PERFORMANCE_REVIEW.md  PHASE_2_QUICK_REFERENCE.md  PHASE_3_COMPLETION.md  PHASE_4_4_PLAN.md  PHASE_4_DOCUMENTATION_COMPLETE.md  PHASE_4_TO_PHASE_5_TRANSITION.md  PHASE_5_ARCHITECTURE_REVIEW.md  PHASE_5_DOCUMENTATION_QUALITY_REVIEW.md  PHASE_5_FINAL_APPROVAL.md  PHASE_5_PLAN.md  PHASE_5_REMAINING_REVIEWS.md  PHASE_5_REVIEWER_ASSIGNMENT.md  PHASE_5_REVIEW_COMMUNICATION_PLAN.md  PHASE_5_REVIEW_EXECUTIVE_SUMMARY.md  PHASE_5_REVIEW_INDEX.md  PHASE_5_REVIEW_KICKOFF.md  (+38 more)
.claude/: INDEX_PHASE_6_AND_BEYOND.md  PHASE_6_CODE_REVIEW_REPORT.md  PHASE_6_IMPLEMENTATION_COMPLETE.md  PHASE_6_PLAN.md  PHASE_6_PLAN_REFINED.md  POST_PHASE_6_QUICK_REFERENCE.md  POST_PHASE_6_STRATEGIC_PLAN.md
.github/workflows/: ci.yml  migration-deployment-gates.yml  migration-performance.yml  migration-tests.yml  publish.yml  python-version-matrix.yml  quality-gate.yml  wheels.yml
.phases/: CURRENT_STATUS.md  EXPERT_REVIEW_EXECUTIVE_BRIEF.md  HANDOFF_TO_SPECIALIST_REVIEW.md  PHASE_3_EXPERT_REVIEW_SYNTHESIS.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN_REVISED.md  PHASE_3_PLANNING.md  PHASE_3_READY_FOR_IMPLEMENTATION.md  PHASE_4_2_2_DEVELOPER_CHECKLIST.md  PHASE_4_2_2_EXECUTIVE_SUMMARY.md  PHASE_4_2_2_INDEX.md  PHASE_4_2_2_SCHEMA_LINTING_PLAN.md  PHASE_4_2_3_INDEX.md  PHASE_4_2_3_PLAN.md  PHASE_4_2_ADDENDUM_PYTHON_NOTES.md  PHASE_4_2_HANDOFF.md  PHASE_4_2_IMPLEMENTATION_PLAN.md  PHASE_4_LONG_TERM_STRATEGY.md  PHASE_4_MILESTONE_4_1_SUMMARY.md  PHASE_4_SPECIALIST_REVIEW.md  PHASE_5_COMPLETE_SUMMARY.md  PHASE_5_DAY_1_SUMMARY.md  PHASE_5_DAY_2_SUMMARY.md  PHASE_5_DAY_3_PLAN.md  POSTGRESQL_SPECIALIST_REVIEW.md  PRINTOPTIM_LEAD_SPECIALIST_REVIEW.md  PYTHON_ARCHITECT_REVIEW_GUIDE.md  PYTHON_ARCHITECT_SPECIALIST_REVIEW.md  README.md  REVIEW_STATUS_SUMMARY.md  REVISED_PLAN_SUMMARY.md  git-integration-suite.md  migration-idempotency-validation.md  phase-01-level-3.md  phase-02-levels-1-2.md  phase-03-levels-4-5.md  phase-11-data-consistency.md  phase-4.2.4-TODO.md  phase-5-cli-integration.md  tenant-isolation-linting.md
.phases/archive/: ASSESSMENT_AND_NEXT_STEPS.md  CONFITURE_ARCHITECT_SPECIALIST_REVIEW.md  EXPERT_REVIEW_SUMMARY.md  PHASE_2_DELIVERABLES.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_REVISED_FULL_SCOPE.md  SPECIALIST_REVIEW_PACKET.md
ci/: README.md  local_ci.py
db/environments/: local.yaml  test.yaml
db/migrations/: 001_test_from_cli.py
db/schema_history/: 20260228091040_add_users_table.sql  20260228091040_test_migration.sql  20260228091044_add_bar_column.sql  20260228091044_add_users.sql  20260228091044_first_migration.sql  20260228091044_second_migration.sql  20260228091044_test.sql  20260228091044_test_migration.sql  20260228091123_add_users_table.sql  20260228091930_add_users_table.sql  20260228091930_test_migration.sql  20260228091934_add_bar_column.sql  20260228091934_add_users.sql  20260228091934_first_migration.sql  20260228091934_second_migration.sql  20260228091934_test.sql  20260228091934_test_migration.sql  20260228092014_add_users_table.sql  20260228093733_add_users_table.sql  20260228093733_test_migration.sql  20260228093824_add_users_table.sql  20260228093824_test_migration.sql  20260228095627_add_users_table.sql  20260228095627_test_migration.sql  20260228095632_add_bar_column.sql  20260228095632_add_users.sql  20260228095632_first_migration.sql  20260228095632_second_migration.sql  20260228095632_test.sql  20260228095632_test_migration.sql  20260228095711_add_users_table.sql  20260228095815_add_users_table.sql  20260228095815_test_migration.sql  20260228095819_add_bar_column.sql  20260228095819_add_users.sql  20260228095819_first_migration.sql  20260228095819_second_migration.sql  20260228095819_test.sql  20260228095819_test_migration.sql  20260228095859_add_users_table.sql  (+39 more)
docs/: COMPLIANCE_OFFICER_SIGN_OFF.md  DOCUMENTATION_STYLE.md  MEDIUM_4_STRATEGIES.md  PEER_REVIEW_SIGN_OFF.md  PHASE_4_DOCUMENTATION_SUMMARY.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_FINAL_QA_SIGN_OFF.md  PHASE_5_QA_EXECUTION_COMPLETE.txt  PHASE_5_QA_PLAN.md  cli-reference.md  comparison-with-alembic.md  error-reference.md  getting-started-by-role.md  getting-started.md  glossary.md  hooks.md  index.md  linting.md  migration-strategies.md  organizing-sql-files.md  performance.md  troubleshooting.md  type-checking.md
docs/api/: anonymization.md  blue-green.md  hooks.md  index.md  linting.md  migrator.md  pg-version.md  rollback-generator.md  syncer.md  wizard.md
docs/architecture/: multi-agent-coordination.md
docs/features/: overview.md
docs/guides/: 01-build-from-ddl.md  02-incremental-migrations.md  03-production-sync.md  04-schema-to-schema.md  acl-coverage.md  advanced-patterns.md  anonymization-strategy-framework.md  anonymization.md  bootstrap.md  build-validation.md  cli-dry-run.md  compliance.md  consistency-validation.md  copy-format-examples.md  copy-format-index.md  copy-format-loading.md  custom-anonymization-strategies.md  dry-run-mode.md  dry-run.md  ecommerce-data-masking.md  error-context-development.md  finance-sox-compliance.md  function-uniqueness.md  generic-webhook-integration.md  git-aware-validation.md  github-actions-workflow.md  healthcare-hipaa-compliance.md  hooks-vs-pre-commit.md  hooks.md  integrations.md  interactive-migration-wizard.md  international-compliance.md  legacy-bootstrap.md  medium-1-build-from-ddl.md  (+32 more)
examples/: README.md
scripts/: bump-version.py  sync_docstring_version.py
src/: builder.rs  hasher.rs
tests/: conftest.py
(+938 files in other folders)
