[project]
name = "fraiseql-confiture"
version = "0.26.0"
description = "PostgreSQL schema evolution with built-in multi-agent coordination 🍓"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "evoludigit", email = "lionel.hamayon@evolution-digitale.fr"}
]
keywords = [
    "postgresql",
    "migration",
    "database",
    "schema",
    "ddl",
    "coordination",
    "multi-agent",
    "collaboration",
    "conflict-detection",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "psycopg[binary,pool]>=3.1.0",
    "sqlparse>=0.5.0",
    "sqlglot>=28.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.6.0",
    "ty>=0.0.7",  # Astral's ultra-fast type checker (replaces mypy)
    "maturin>=1.7.0",
    "pglast>=6.0",
    "fastapi>=0.111",
    "httpx>=0.27",
    "jsonschema>=4",  # Validate JSON output schemas in docs/reference/json-schemas/
]

fraiseql = [
    # FraiseQL integration (requires Python 3.13+)
]

# fraiseql-uuid is the CANONICAL home for the structured pattern-UUID convention
# (the {table}{type}-{func}-4{scen}-8{...}-{inst} v4-compliant encoding). Confiture's
# seed-validation only does generic RFC-4122 *format* checks and deliberately keeps
# NO parallel copy of that convention — the old uuid_patterns/uuid_validator island
# was deleted (ECO-rec2). This OPT-IN extra pulls in the canonical definition for
# projects that want structured-pattern validation, and lets the convention-seam
# guard test (tests/unit/test_uuid_convention_seam.py) assert alignment when present.
# Not installed by CI (no workflow uses --all-extras); core install never requires it.
seed-uuid = [
    "fraiseql-uuid>=0.1.3",
]

ast = [
    "pglast>=6.0",
]

mcp-http = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

notifications = [
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/fraiseql/confiture"
Documentation = "https://github.com/fraiseql/confiture"
Repository = "https://github.com/fraiseql/confiture"
Issues = "https://github.com/fraiseql/confiture/issues"
FraiseQL = "https://github.com/fraiseql/fraiseql"

[project.scripts]
confiture = "confiture.cli.main:app"

[project.entry-points."pytest11"]
confiture = "confiture.testing.pytest_plugin"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "confiture._core"
features = ["pyo3/extension-module"]
include = [
    { path = "python/confiture/schemas/*.json", format = "wheel" },
]

[tool.pytest.ini_options]
testpaths = ["tests", "python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["python"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no database required)",
    "integration: Integration tests (require database)",
    "e2e: End-to-end tests (full workflows)",
    "slow: Slow tests (skip in fast CI)",
    "benchmark: Performance benchmark tests",
]

[tool.coverage.run]
source = ["python/confiture"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/testing/fixtures/*",  # Test infrastructure, not application code
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["python"]

[tool.ruff.lint]
# Deliberate, focused ruleset (see ARCH-M3). Confiture runs a curated core
# rather than the full prescribed superset: the families below catch real bugs
# and style drift with near-zero false positives. The heavier / more opinionated
# families (PL, PERF, FURB, ERA, PTH, TCH, RUF) are intentionally NOT enabled —
# enabling the full set surfaces ~900+ findings (much of it churn) without
# commensurate value today. Adopt them incrementally, family-by-family, if a
# future need earns it. This config — not the global methodology — is the
# source of truth for Confiture's lint scope.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "UP042",  # StrEnum migration changes str() semantics; code/tests rely on the
    # (str, Enum) form (e.g. str(LintSeverity.ERROR) == "LintSeverity.ERROR").
]

[tool.ruff.lint.per-file-ignores]
# Allow assert statements and nested with statements in tests
# SIM117: Nested with statements are often clearer in tests with many patches
# SIM105: try-except-pass is acceptable for "expected to fail" test scenarios
"tests/*" = ["ARG", "S101", "SIM117", "SIM105"]
"python/tests/*" = ["ARG", "S101", "SIM117", "SIM105"]
"python/confiture/cli/*" = ["ARG001"]  # Allow unused args in CLI callbacks

[tool.ty.src]
# Astral's ultra-fast type checker configuration
# Includes Python source code, excludes tests and examples
include = ["python"]
exclude = ["examples", "tests", "**/test_*.py"]

[tool.ty.environment]
python-version = "3.11"
root = ["python"]

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.rules]
# psycopg3 uses strict type requirements (LiteralString for SQL queries).
# This library is designed to execute dynamic SQL from:
# - Migration files (trusted developer content)
# - Schema building (concatenated SQL files)
# - SAVEPOINT/ROLLBACK commands (safe, controlled strings)
# These are safe operations that can't be made type-safe without major refactoring.
invalid-argument-type = "ignore"

# Strategy configs use dynamic attribute access that the type checker can't verify.
# The base StrategyConfig class is extended by subclasses with additional fields,
# but the type system only sees the base class type in generic code.
possibly-missing-attribute = "ignore"

# psycopg 3.3+ types execute() to accept only LiteralString/SQL/Composed (an
# anti-SQL-injection guardrail). Confiture builds dynamic SQL from double-quoted,
# validated identifiers (each call site carries `# nosec B608`), so the runtime
# string never matches the overload. (Was `invalid-argument-type` under older ty.)
no-matching-overload = "ignore"

[[tool.ty.overrides]]
# pglast AST nodes are dynamically typed (Unknown | None); attribute access on
# them isn't statically resolvable. Scope the suppression to the AST-visitor
# modules so first-party attribute errors stay caught everywhere else.
include = [
    "python/confiture/core/migration_grant_extractor.py",
    "python/confiture/core/linting/libraries/ownership.py",
    "python/confiture/core/linting/libraries/functions.py",
    "python/confiture/core/replica/classifier.py",
]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "ruff==0.15.15",
]
